<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/dlistra"
        android:title="@string/dlistra"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/zaccts"
        android:title="@string/zaccts"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/totrans"
        android:title="@string/totrans"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/barabout"
        android:title="@string/barabout"
        android:orderInCategory="4"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/zapp"
        android:title="App"
        android:icon="@drawable/zxitt"
        app:showAsAction="ifRoom"/>

</menu>