<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5eddb"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/zimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:src="@drawable/zxitt" />

        <TextView
            android:id="@+id/xstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20sp"
            android:text="@string/trans"
            android:textColor="#890000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dip"
                android:text="@string/zacct"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dip"
                android:layout_marginRight="30dip"
                android:text="@string/zowner"
                android:textColor="#000000"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip">

            <TextView
                android:id="@+id/zAcct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:textColor="#0000ff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/zOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dip"
                android:layout_marginRight="20dip"
                android:textColor="#0000ff"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/tbalance"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/trBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="25dip"
                android:background="#cff5e7"
                android:textColor="#0000ff"
                android:textSize="22sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/ttype"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/tipos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:background="@drawable/box_text"
                android:spinnerMode="dropdown"
                android:textColor="#0000ff" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/tdate"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/trDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:background="@drawable/box_text"
                android:textColor="#0000ff"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/tamount"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/trAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:background="@drawable/box_text"
                android:inputType="numberDecimal"
                android:textColor="#0000ff"
                android:textSize="18sp" />
            <requestFocus/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/tnotes"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/trNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:background="@drawable/box_text"
                android:lines="2"
                android:textColor="#0000ff"
                android:textSize="18sp" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="ADD Transactions" />

    </LinearLayout>

</LinearLayout>
<!-- android:layout_marginTop="12dip" -->