<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaf5e2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/zimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:src="@drawable/zxitt" />

        <TextView
            android:id="@+id/jstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15sp"
            android:text="@string/jtrans"
            android:textColor="#890000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dip"
                android:text="@string/jxacct"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dip"
                android:layout_marginRight="30dip"
                android:text="@string/jxowner"
                android:textColor="#000000"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip">

            <TextView
                android:id="@+id/jAcct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:textColor="#4d6ef1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/jOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dip"
                android:layout_marginRight="20dip"
                android:textColor="#4d6ef1"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/jxbalance"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/jBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="25dip"
                android:background="#cff5e7"
                android:textColor="#4d6ef1"
                android:textSize="22sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/jxid"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/jid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:textColor="#4d6ef1"
                android:textStyle="bold"
                android:textSize="22sp" />

        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/jxtype"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/jtipos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#4d6ef1" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/jxdate"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/jDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/box_text"
                android:textColor="#000000"
                android:textSize="18sp" />

        </TableRow>



        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/jxamount"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:background="@drawable/box_text"
                android:inputType="numberDecimal"
                android:textColor="#000000"
                android:textSize="18sp" />
            <requestFocus/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/jxnotes"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:background="@drawable/box_text"
                android:lines="2"
                android:textColor="#000000"
                android:textSize="18sp" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dip"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="Update" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:clickable="true"
            android:text="Delete" />

    </LinearLayout>

</LinearLayout>